# codex-advisor

./: .gitignore  CONTRIBUTING.md  Makefile  README.md  SECURITY.md  install.sh  pyproject.toml
.github/workflows/: ci.yml
src/codex_advisor/: advisor_prompt.md  codex_cli.py  config.py  errors.py  providers.py  rollout.py  server.py
tests/: conftest.py  test_codex_cli.py  test_config.py  test_install_defaults.py  test_providers.py  test_rollout.py  test_server_config_tool.py  test_server_consult.py  test_smoke.py
tests/fixtures/: rollout_sample.jsonl
