[project]
name = "codex-advisor"
version = "0.1.0"
description = "Model-agnostic advisor MCP server for OpenAI Codex CLI"
requires-python = ">=3.12"
dependencies = [
    "mcp>=1.2",
    "httpx>=0.27",
    "tomli-w>=1.0",
]

[project.scripts]
codex-advisor = "codex_advisor.server:main"

[dependency-groups]
dev = [
    "pytest>=8",
    "respx>=0.22",
    "ruff>=0.6",
    "pyright>=1.1.390",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/codex_advisor"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
src = ["src", "tests"]

[tool.pyright]
include = ["src", "tests"]
typeCheckingMode = "standard"
